[tool.poetry]
name = "async-stripe"
version = "4.0.2"
description = "An asynchronous wrapper around Stripe's official python library."
authors = [
    "Bharat Chauhan <tell.bhch@gmail.com>", 
    "Christian Glacet <cglacet@kune.tech>",
]
maintainers = [
    "Bharat Chauhan <tell.bhch@gmail.com>", 
    "Christian Glacet <cglacet@kune.tech>",
]
license = "BSD 3-Clause"
packages = [
    {include = "async_stripe"},
]
repository = "https://github.com/bhch/async-stripe"
readme = "README.md"
keywords = ["stripe", "async", "asynchronous", "wrapper"]

[tool.poetry.dependencies]
python = "^3.6"
stripe = "4.0.2"
tornado = ">=5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
mypy = "^0.812"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
