[tool.poetry]
name = "async-stripe"
version = "6.1.0"
description = "An asynchronous wrapper around Stripe's official python library."
authors = [
    "Bharat Chauhan <tell.bhch@gmail.com>", 
    "Christian Glacet <cglacet@kune.tech>",
]
maintainers = [
    "Bharat Chauhan <tell.bhch@gmail.com>", 
    "Christian Glacet <cglacet@kune.tech>",
]
license = "BSD 3-Clause"
packages = [
    {include = "async_stripe"},
]
repository = "https://github.com/bhch/async-stripe"
readme = "README.md"
keywords = ["stripe", "async", "asynchronous", "wrapper"]

[tool.poetry.dependencies]
python = "^3.6"
stripe = "6.1.0"
tornado = ">=5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
mypy = "^0.940"
flake8 = "^3.9.2"
pytest = "7.0.1"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
py = "^1.11.0"
PyYAML = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
